# cool_league_site

./: .gitignore  README.md  champions.csv  data_prep.py  flask_app.py  pyproject.toml  update_db.py
auction/: auction_data.py  auction_sim.py  auction_sim_old.py  exploration.py  fit_auction_exponent.py  methodology
databases/: alltime_standings.sql  betting_table.sql  create_db.sql  efficiencys.sql  h2h.sql  managers.sql  matchup_results.sql  power_ranks.sql  projections.sql  record_vs_league.sql  records.sql  schedule_switcher.sql  season_sim.sql  season_sim_ranks.sql  season_sim_wins.sql  standings.sql  standings_2018.sql  standings_2021.sql  team_ids.sql  week_sim.sql
databases/updates/: betting_table.py  matchups.py  power_ranks.py  update_alltimestandings.py  update_betting_table.py  update_efficiencies.py  update_h2h.py  update_managers.py  update_matchups.py  update_player_stats.py  update_power_ranks.py  update_records.py  update_season_sims.py  update_ss.py  update_team_ids.py  update_week_projections.py
scripts/api/: DataLoader.py  Rosters.py  Settings.py  Teams.py  dataloader.py  fantasy_pros.py  settings.py
scripts/efficiency/: efficiencies.py  efficiency.py  update_efficiency_db.py  xxefficiencies.py
scripts/home/: playoff_scenarios.py  power_ranks.py  standings.py  update_standings.py  update_standings_db.py
scripts/records/: initialize.py
scripts/scenarios/: scenarios.py  (+2 more)
static/: style.css
templates/: base.html  champions.html  efficiencies.html  media.html  powerrank.html  records.html  scenarios.html  simulations.html
(+27 files in other folders)
