[project]
name = "cool-league-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adjusttext>=1.3.0",
    "flask>=3.1.3",
    "flask-fontawesome>=0.2.0",
    "matplotlib>=3.10.9",
    "mysql-connector-python>=9.6.0",
    "nfl-data-py>=0.3.2",
    "pandas==2.3.3",
    "paramiko==2.12.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
    "sshtunnel>=0.4.0",
]
